--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
     "lint": "biome check ."
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.1",
+    "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.2",
-    "watch": "^1.0.2"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "mongodb": "^6.8.1",
+    "mongodb": "^6.10.0",
     "zod": "^3.23.8"
   },
   "maintainers": [
